estimateRangeQuery() 및 가시화 관련 기능 수정